# Violyt-Ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  jiraaf_brand_updated_from_docx.json  main.py  ocr_processor.py  prompt.md  pyproject.toml  rag.py
alembic/: env.py  script.py.mako
app/: __init__.py
contracts/: frontend-api.ts
deploy/: docker-compose.server.yml  nginx-default
docs/: API_CONTRACTS.md  ARCHITECTURE.md  CODE_DOCUMENTATION.md  CREATIVE_GENERATION_ARCHITECTURE.md  CURRENT_ARCHITECTURE_STATE.md  DB_SCHEMA.md  DB_SETUP.md  DEVELOPER_OPERATIONS.md  DOCKER_SETUP.md  FRONTEND_SETUP.md  RAG_GROUNDING_STRATEGY.md  README.md  TESTING_TRIAGE_CHECKLIST.md  sample_db_seed.sql
docx/: BRAND_ALIGNMENT_GUIDE.md  CONTENT_GENERATION_FLOW_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  comparision.md  enhancement.md  updated_architecture.md
font/: font_detector.py  format_validation.py  gpt41_font_detector.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: debug_chat_prompt.py  live_smoke_api.py  ragas_evaluation.py  reset_local_dev_state.ps1  run_generation_stub_demo.py  run_worker.py  seed_rbac.py
tests/: test_ai_orchestrator.py  test_analytics_service.py  test_architecture_end_to_end.py  test_artifact_state.py  test_asset_delivery.py  test_blueprint.py  test_blueprint_service.py  test_brand_asset_analysis.py  test_brand_asset_service.py  test_brand_intelligence.py  test_brand_schema.py  test_brand_scoring_prompt_matching.py  test_brand_scoring_service.py  test_brand_service.py  test_chat_service.py  test_composition_planner.py  test_content_format_guide.py  test_content_planning.py  (+35 more)
(+259 files in other folders)
