[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "violyt-backend"
version = "0.1.0"
description = "Multi-tenant backend and AI orchestration services for Violyt / BrandLoveStudio.AI"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "anthropic>=0.42.0",
  "asyncpg>=0.29.0",
  "bcrypt>=4.0,<4.1",
  "CairoSVG>=2.7.1",
  "cryptography>=43.0.1",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "faiss-cpu>=1.8.0",
  "google-auth>=2.35.0",
  "google-cloud-vision>=3.8.0",
  "httpx>=0.27.2",
  "langchain-community>=0.3.2",
  "langchain-openai>=0.2.1",
  "matplotlib>=3.9.0",
  "numpy>=2.1.1",
  "opencv-python-headless>=4.10.0.84",
  "openai>=1.51.0",
  "passlib[bcrypt]>=1.7.4",
  "fonttools>=4.54.0",
  "pdfplumber>=0.11.4",
  "pillow>=10.4.0",
  "PyMuPDF>=1.24.0",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "PyJWT>=2.9.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.12",
  "python-pptx>=1.0.2",
  "reportlab>=4.2.5",
  "scikit-image>=0.24.0",
  "scikit-learn>=1.5.2",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.31.0",
  "webcolors>=24.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
norecursedirs = [".pytest_cache", "pytest-cache-files-*"]

[tool.setuptools]
py-modules = ["ocr_processor", "rag"]

[tool.setuptools.packages.find]
include = ["app*", "contracts*", "scripts*"]
